Fixes spacing in mobile nav

--- a/_scss/layout/_navbar.scss
+++ b/_scss/layout/_navbar.scss
@@ -11,6 +11,7 @@
   color: $white;
 }
 
+.off-canvas .menu li,
 .dropdown .menu li {
   margin-bottom: 0;
 }
